--- a/codeception.dist.yml
+++ b/codeception.dist.yml
@@ -9,6 +9,11 @@ settings:
     bootstrap: _bootstrap.php
     colors: true
     memory_limit: 1024M
+coverage:
+    enabled: true
+    whitelist:
+        include:
+            - src/*
 extensions:
     enabled:
         - Codeception\Extension\DataProvider
